--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -53,11 +53,11 @@
           <div class="user-name">{{ user.name }}</div>
 
         
-          <div class="linkedin-wrapper" *ngIf="user.linkedin">
+          <div class="linkedin-wrapper" *ngIf="user.linkedin_url">
             <ion-icon
               name="logo-linkedin"
               class="linkedin-icon"
-              (click)="openLinkedIn(user.linkedin)">
+              (click)="openLinkedIn(user.linkedin_url)">
             </ion-icon>
             <!-- <span class="linkedin-text" (click)="openLinkedIn(user.linkedin)">
               {{ user.linkedin }}
@@ -82,11 +82,11 @@
           <div class="user-name">{{ user.name }}</div>
 
         
-          <div class="linkedin-wrapper" *ngIf="user.linkedin">
+          <div class="linkedin-wrapper" *ngIf="user.linkedin_url">
             <ion-icon
               name="logo-linkedin"
               class="linkedin-icon"
-              (click)="openLinkedIn(user.linkedin)">
+              (click)="openLinkedIn(user.linkedin_url)">
             </ion-icon>
             <!-- <span class="linkedin-text" (click)="openLinkedIn(user.linkedin)">
               {{ user.linkedin }}
