--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -89,9 +89,9 @@
       <ion-button class="contin" expand="block" fill="outline"  (click)="onGuestContinue()">
         Continue
       </ion-button>
-      <ion-button class="reg" expand="block"  (click)="onGuestRegister()">
+      <!-- <ion-button class="reg" expand="block"  (click)="onGuestRegister()">
         Register Now
-      </ion-button>
+      </ion-button> -->
     </div>
   </div>
 </ion-content>
