updated hidden features

--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -25,9 +25,9 @@
     <ion-segment-button value="default">
       <ion-label>App Notifications</ion-label>
     </ion-segment-button>
-    <!-- <ion-segment-button value="messages">
+    <ion-segment-button value="messages">
       <ion-label>Messages</ion-label>
-    </ion-segment-button> -->
+    </ion-segment-button>
   </ion-segment>
 
   <!-- Searchbar -->
