--- a/src/app/delegates/delegates.page.html
+++ b/src/app/delegates/delegates.page.html
@@ -40,8 +40,8 @@
         <div class="user-name">{{ user.name }}</div>
 
         <!-- LinkedIn Icon -->
-        <a *ngIf="user.linkedin"
-           [href]="user.linkedin"
+        <a *ngIf="user.linkedin_url"
+           [href]="user.linkedin_url"
            target="_blank"
            rel="noopener noreferrer"
            class="linkedin-icon"
@@ -73,8 +73,8 @@
       <p>{{ selectedUser.about }}</p>
 
       <!-- LinkedIn link  -->
-      <div class="social-links" *ngIf="selectedUser.linkedin">
-        <a [href]="selectedUser.linkedin" target="_blank" rel="noopener noreferrer">
+      <div class="social-links" *ngIf="selectedUser.linkedin_url">
+        <a [href]="selectedUser.linkedin_url" target="_blank" rel="noopener noreferrer">
           <ion-icon name="logo-linkedin"></ion-icon>
           <span>View LinkedIn</span>
         </a>
