updated design issue with schedule

--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -47,8 +47,8 @@
       
       <div class="time-col">
         <div class="main-time">
-          {{ slot.time }}
-          <span *ngIf="slot.time2" class="time2">– {{ slot.time2 }}</span>
+          {{ slot.start_time }}
+          <span *ngIf="slot.end_time" class="time2">– {{ slot.end_time }}</span>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
         <!--  Break session -->
         <div *ngIf="slot.isBreak" class="break-session">
           <ion-item lines="none" class="break-item">
-            <ion-label class="session-title">{{ slot.title }}</ion-label>
+            <ion-label class="session-title">{{ slot.topic_name }}</ion-label>
           </ion-item>
         </div>
 
@@ -68,9 +68,9 @@
           <!-- Accordion if roles exist -->
           <ng-container *ngIf="slot.roles && slot.roles.length > 0; else noRolesSession">
             <ion-accordion-group [value]="openedAccordion" (ionChange)="onAccordionChange($event)">
-              <ion-accordion [value]="slot.time">
+              <ion-accordion [value]="slot.start_time">
                 <ion-item slot="header" lines="none">
-                  <ion-label class="session-title">{{ slot.title }}</ion-label>
+                  <ion-label class="session-title">{{ slot.topic_name }}</ion-label>
 
                   <!-- ❤️ Favorite -->
                   <ion-button fill="clear" class="favorite-btn" *ngIf="isLoggedIn()" (click)="toggleFavorite(slot)">
@@ -81,7 +81,7 @@
                 
                 <div class="session-body"
                      slot="content"
-                     [ngClass]="{'active': openedAccordion === slot.time}">
+                     [ngClass]="{'active': openedAccordion === slot.start_time}">
                   <div *ngFor="let item of slot.roles" class="subsession">
                     <div class="sub-time">{{ item.role_name }}</div>
                     <div class="sub-details">
@@ -99,7 +99,7 @@
          
           <ng-template #noRolesSession>
             <ion-item lines="none" class="simple-session">
-              <ion-label class="session-title">{{ slot.title }}</ion-label>
+              <ion-label class="session-title">{{ slot.topic_name }}</ion-label>
               <ion-button *ngIf="isLoggedIn()" fill="clear" class="favorite-btn" (click)="toggleFavorite(slot)">
                 <ion-icon [name]="isFavorite(slot) ? 'heart' : 'heart-outline'"
                           class="favorite-icon"></ion-icon>
