review changes and design changes

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -68,7 +68,7 @@
         <ion-card class="card" (click)="navigate('/home/schedule')">
           <!-- <ion-icon name="time-outline"></ion-icon> -->
          <img src="assets/icon/scientific-pro-icon.svg" class="caro-icon">
-          <p>Scientific Program</p>
+          <p>Program Schedule</p>
         </ion-card>
         <ion-card class="card" *ngIf="isLoggedIn()" (click)="navigate('/home/favourites')">
           <!-- <ion-icon name="heart-outline" class="caro-icon"></ion-icon> -->
