--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -4,7 +4,7 @@
       <ion-button fill="clear" (click)="goBack()" slot="start">
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
-      <span class="page-title">Scientific program</span>
+      <span class="page-title">Program Schedule</span>
     </div>
     <ion-buttons slot="end">
       <ion-button fill="clear"></ion-button>
