--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -58,15 +58,18 @@ ion-toolbar {
 
 /* -------- Segment -------- */
 .custom-segment {
-  --background: rgba(48, 48, 48, 0);
+  --background: rgb(56, 56, 56);
+  margin-top: 2%;
+  padding-bottom: 10px;
   --indicator-color: #8aff00;
-  --color: #fff;
   padding: 10px;
   border-radius: 12px;
 
   ion-segment-button {
     --color-checked: #8aff00;
     font-weight: 600;
+
+    ion-label {  color: rgb(255, 255, 255);}
   }
 }
 
