--- a/src/app/todays-schedule/today-schedule.page.html
+++ b/src/app/todays-schedule/today-schedule.page.html
@@ -7,7 +7,7 @@
       <ion-button fill="clear" (click)="goBack()" slot="start">
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
-      <span class="page-title">Scientific program</span>
+      <span class="page-title">Program Schedule</span>
     </div>
 
    
