--- a/src/app/accommodation/accommodation.page.scss
+++ b/src/app/accommodation/accommodation.page.scss
@@ -12,6 +12,7 @@ ion-header,
 ion-toolbar {
   --ion-toolbar-background: #000 !important;
   color: #fff !important;
+  padding-top:10px;
 
   ion-icon {
     color: #fff !important;
