--- a/src/app/delegates/delegates.page.scss
+++ b/src/app/delegates/delegates.page.scss
@@ -13,6 +13,7 @@ ion-header,
 ion-toolbar {
   --ion-toolbar-background: #000 !important;
   color: #fff !important;
+  padding-top:10px;
 
   ion-title {
     color: #97C93C;
