--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -76,7 +76,7 @@ ion-toolbar {
 /* -------- Searchbar -------- */
 .custom-searchbar {
   --background: rgba(250, 250, 250, 0.08);
-  --color: #fff;
+  --color: #93c439;
   --placeholder-color: rgba(255, 255, 255, 0.6);
   --icon-color: #8aff00;
   border-radius: 12px;
