--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -72,7 +72,7 @@ ion-toolbar {
 }
 
 .settings-page {
-    --ion-background-color: #f6f7fb;
+    --ion-background-color: #fbfaf6;
     border-top-left-radius: 55px;
     border-top-right-radius: 55px;
     padding: 20px;
