--- a/src/app/app-help/help.page.scss
+++ b/src/app/app-help/help.page.scss
@@ -13,6 +13,7 @@ ion-header,
 ion-toolbar {
   --ion-toolbar-background: #000 !important;
   color: #fff !important;
+  
 
   ion-title {
     color: #97C93C;
@@ -159,6 +160,9 @@ ion-toolbar {
       margin-bottom: 20px;
       color: #dddddd;
       text-align: left;
+      overflow: auto;
+      height: 350px;
+      max-height: 100%;
     }
     h3 {
       font-size: 1.2rem;
