--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,4 +1,11 @@
 <div class="loading-container" [class.loading-fullscreen]="fullScreen">
-  <div class="loading-spinner" [class.loading-small]="size === 'small'" [class.loading-large]="size === 'large'"></div>
-  <div class="loading-message" *ngIf="message">{{ message }}</div>
+  <div class="loading-logo"></div>
+  <div class="brand-name">c0cOn</div>
+
+  <div class="loading-message" *ngIf="message">
+    {{ message }}
+    <div class="loading-dots">
+      <span></span><span></span><span></span>
+    </div>
+  </div>
 </div>
