design changes for iphine 13 mini

--- a/src/app/about-conference/about-conference.page.scss
+++ b/src/app/about-conference/about-conference.page.scss
@@ -33,14 +33,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
@@ -157,7 +157,7 @@ ion-content::part(background) {
       color: #dddddd;
       text-align: left;
       overflow: auto;
-      height: 350px;
+      height: 280px;
       max-height: 100%;
 
       p {
