--- a/src/app/attraction/attraction.page.scss
+++ b/src/app/attraction/attraction.page.scss
@@ -31,14 +31,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
@@ -185,7 +185,8 @@ ion-toolbar {
   
     .location-img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      max-height: 500px;
     }
   
     .location-details {
