--- a/src/app/venue-layout/venue-layout.page.scss
+++ b/src/app/venue-layout/venue-layout.page.scss
@@ -8,6 +8,9 @@
   color: #fff;
 }
 
+  ion-content::part(background) {
+  display: none !important;
+}
 
 ion-header,
 ion-toolbar {
@@ -32,14 +35,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
