--- a/src/app/badge/badge.page.scss
+++ b/src/app/badge/badge.page.scss
@@ -32,14 +32,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
@@ -226,4 +226,21 @@ ion-content::part(background) {
     display: flex;
     align-items: center;
   }
+}
+@media (max-width:290px) {
+  .badge-content {
+    padding: 25px 25px;
+  }
+.user-photo {
+  width: 100px;
+  height: 100px;
+}
+.qr-code {
+  padding: 10px;
+}
+.qr-code img
+{
+   width: 110px;
+   height: 110px;
+}
 }
