--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -86,6 +86,7 @@
   box-shadow: 0 -8px 20px rgba(0, 0, 0, 0.5);
   max-height: calc(100vh - 230px);
   overflow-y: auto;
+  margin-bottom: 35px;
 }
 
   
@@ -370,6 +371,22 @@
     }
   }
 }
+
+@media (max-width: 290px){
+  .conference-page
+   .carousel
+   .card{
+       min-width: 50%;
+        max-width: 50%;
+        padding: 1rem;
+  }
+  .conference-page
+   .carousel
+   .card p {
+    font-size: 12px;
+   }
+}
+
 
 
 
