--- a/src/app/delegates/delegates.page.scss
+++ b/src/app/delegates/delegates.page.scss
@@ -34,14 +34,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
@@ -124,8 +124,9 @@ ion-toolbar {
 
     .user-list {
       margin-top: 10px;
-      height: 400px;
+      height: 225px;
       overflow: auto;
+      padding-bottom: 15px;
 
       .user-item {
         display: flex;
