--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -45,10 +45,11 @@ ion-toolbar {
   backdrop-filter: blur(16px);
   border-top-left-radius: 55px;
   border-top-right-radius: 55px;
-  height: 100%;
+  height: 350px;
   overflow: auto;
   margin-top: 10%;
   padding: 24px;
+  padding-bottom: 20%;
   animation: fadeInUp 1.4s ease-out;
 }
 
@@ -181,5 +182,10 @@ ion-toolbar {
   }
   .note-title {
     font-size: 0.95rem;
+  }
+}
+@media (max-width: 820px) {
+  .app-content {
+    height: 100%;
   }
 }
