--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -32,14 +32,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
   }
@@ -127,6 +127,8 @@ ion-toolbar {
     ion-list {
       padding: 12px;
       background: transparent;
+      height: 250px;
+      overflow: auto;
   
       ion-item {
         --background: #ffffff;
@@ -144,8 +146,10 @@ ion-toolbar {
         }
   
         ion-label {
-          font-weight: 500;
+          font-weight: 700;
           color: #333;
+          font-size: 14px;
+          
         }
   
         ion-toggle {
@@ -192,6 +196,12 @@ ion-toolbar {
         width: 50px;
         height: 50px;
       }
+    }
+  }
+
+  @media screen and (min-width: 820px) {
+    .settings-page ion-list {
+        height: 100%;
     }
   }
   
