--- a/src/app/sponsors/sponsors.page.scss
+++ b/src/app/sponsors/sponsors.page.scss
@@ -38,14 +38,14 @@ ion-toolbar {
   align-items: center;
 
   ion-button {
-    --padding-start: 0;
+    --padding-start: 10px;
     --padding-end: 0;
     margin-right: 8px;
   }
 
   .page-title {
     color: #97C93C;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     text-shadow: 0 0 6px #97C93C;
     margin: 0 auto;
